# Drums-Paino-Studio

./: README.md  metadata.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/: MainActivity.kt
app/src/main/java/com/example/audio/: AudioDecoder.kt  AudioEngine.kt  MidiFileExporter.kt  MusicTheory.kt  SoundPack.kt
app/src/main/java/com/example/database/: PresetDao.kt  PresetEntity.kt  PresetRepository.kt  ProjectDao.kt  ProjectDatabase.kt  ProjectEntity.kt  ProjectRepository.kt
app/src/main/java/com/example/ui/: CommunityLibraryScreen.kt  SequencerScreen.kt  SequencerViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
facial-expression-pipeline/: .gitignore  README.md  pyproject.toml  requirements-dev.txt
facial-expression-pipeline/exprsheet/: __init__.py  __main__.py  cli.py  data.py  pdf.py  prompts.py  registry.py  schema.py
facial-expression-pipeline/tests/: conftest.py  test_batches.py  test_pdf.py  test_prompts.py  test_records.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest
web/src/: library.ts  main.ts  melodyState.ts  persistence.ts  style.css
web/src/audio/: drumSynth.ts  engine.ts  midiExporter.ts  musicTheory.ts  soundPacks.ts  wavEncoder.ts
web/src/ui/: dom.ts  libraryView.ts  mixerView.ts  padsView.ts  pianoRollView.ts  sequencerView.ts  soundDesignDialog.ts
