[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "exprsheet"
version = "0.1.0"
description = "Reproducible facial-expression reference-sheet pipeline (PDF + image prompts)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pypdf>=4.0",
]

[project.scripts]
exprsheet = "exprsheet.cli:main"

[tool.setuptools]
packages = ["exprsheet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
